# robot_tfg

./: .gitignore  README.md
firmware/: stm_fw_1.0.ioc
firmware/Core/Inc/: stm32f4xx_it.h
firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
resources/calibration/gyro/: gyro_calibration.ino  gyro_calibration_analysis.py
resources/calibration/vision/: vision_calibration_results.py
resources/calibration/vision/accuracy_check/: vision_calibration_analysis.py
resources/calibration/vision/accuracy_check/data/: vision_data_100.csv  vision_data_50.csv
resources/results_analysis/: ground_truth_tracker.py  gt_correction.py  plot_trajectories.py
ros2_ws/src/robot_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_driver/config/: navigation_config.yaml
ros2_ws/src/robot_driver/launch/: robot_full.launch.py
ros2_ws/src/robot_driver/robot_driver/: ekf.py  inv_kinematics.py  navigation.py  odometry.py  stm32_bridge.py  vision_localization.py
ros2_ws/src/robot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/robot_msgs/msg/: EncoderTicks.msg
tests_results/test_config_a/data/: gt_config_a.csv  ros_log_config_a.csv
tests_results/test_config_b/data/: gt_config_b.csv  ros_log_config_b.csv
tests_results/test_config_c/data/: gt_config_c.csv  ros_log_config_c.csv
