<?xml version="1.0"?>
<package format="3"> <name>robot_driver</name>
  <version>0.1.0</version>
  <description>Driver STM32 con cinemática, odometría y misión</description>
  <maintainer email="tu@email.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_msgs</depend> <export>
    <build_type>ament_python</build_type>
  </export>
</package>